Cleaned up widgets
Added commets to widgets

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38d8a78596964760a60c0bf3890663c6",
+       "model_id": "d20e31baea82450aa32fde0747333a39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,8 +56,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib64/python3.8/site-packages/kwant/solvers/default.py:16: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
-      "  warnings.warn(\"MUMPS is not available, \"\n"
+      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
+      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
      ]
     }
    ],
@@ -512,11 +512,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Returns the bandstructure of the lead from -pi to pi\n",
+    "#Returns the bandstructure of the lead from -pi/a to pi/a\n",
     "def get_band(lead0):\n",
     "    bands = kwant.physics.Bands(lead0.finalized()) #calcualtes the band structure for lead\n",
     "    t=2.75\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,21 +738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'interactive' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-5ac9e7acf4fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;31m#reseting or removing some atoms as the widget executes the function anytime a parameter is changed.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;31m#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m Selection = interactive(make_and_display, Angle=widgets.ToggleButtons(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n\u001b[0m\u001b[1;32m     51\u001b[0m                         \u001b[0mWidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Select the width of the leads in terms of carbon atoms\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m                         \u001b[0mDistance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Change the horizontal distance between the leads, not available with 60° angle\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'interactive' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "oldreset=0\n",
     "ireset=0 #dummy variables to workaround that one couldnt change the system parameters while remove atoms was submitted forcing to reset system first\n",
@@ -784,11 +772,11 @@
     "        if ireset==oldreset:   #Dummy variable to check if the string was submitted now or is it still active from previous submission\n",
     "            RemAtoms=[]     #Deletes the old string and proceeds to build a new system \n",
     "        if ireset!=oldreset:   #If the string to remove atoms is newly submitted, then removes atoms \n",
-    "            atoms = map(int, RemAtoms.split(','))\n",
-    "            atoms=set(atoms)\n",
-    "            sys=del_atoms(atoms)\n",
+    "            atoms = map(int, RemAtoms.split(',')) #get a list from a string\n",
+    "            atoms=set(atoms) #gets rid of dublicates\n",
+    "            sys=del_atoms(atoms) #return new instance of sys with atoms removed, all other paramaters stay (lead,v1,A,D,W,etc.)\n",
     "            oldreset+=1\n",
-    "    if len(RemAtoms)==0:\n",
+    "    if len(RemAtoms)==0:     #If there is no list of atoms to remove then it means we build a new system with new params\n",
     "        sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F = make_system(A=Angle,W=Width,D=Distance,S=Shift,F=Chirality) \n",
     "    #returns dimensions of the system for further plotting (ldos and current) and plots the system+band structure\n",
     "    global xaxis, yaxis \n",
@@ -823,18 +811,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a096e4d28a164fb189612c1eb712fb17",
+       "model_id": "e48c8ea880934be1864b51a6a8a41c76",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Angle', description_tooltip='Select the angle between the two lead…"
+       "interactive(children=(ToggleButtons(description='Angle', description_tooltip='Select the angle between the two…"
       ]
      },
      "metadata": {},
@@ -843,7 +831,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6b2d4937e294b029fc9f14506032a17",
+       "model_id": "aa4e1db819e44ca3b88d0b21347fc0fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -857,7 +845,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25d969537beb446a94d461a4488012ed",
+       "model_id": "aa834549aca14aba9f1f7e35d3413571",
        "version_major": 2,
        "version_minor": 0
       },
@@ -880,7 +868,7 @@
     "remov_atoms=interact.options(manual=True, manual_name=\"Remove atoms\") \n",
     "rem_wid=widgets.Text(description_tooltip=\"Enter the numbers of the atoms you want to remove separated by a comma (,)\",description='Enter atoms to be removed:',placeholder='e.g. 1,4,3',style=style)\n",
     "@remov_atoms(Remove=rem_wid)\n",
-    "def calculate_cond(Remove):    \n",
+    "def removing_atoms(Remove):    \n",
     "    global ireset  #ireset is used to control when a new value for remove atoms is entered\n",
     "    if Remove == Selection.children[5].value:  #If the submission is the same string of atoms, the function doesn't update\n",
     "        if len(Remove)>1:\n",
@@ -907,13 +895,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "035325a1e5814327b5b74a817bbc2aae",
+       "model_id": "a33d747e550e465b9da4443e4fd179c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -927,7 +915,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbd53f8953a74b04bb11b531fa23fbd6",
+       "model_id": "dbb4cab519554fa8a468ed40ed8d91b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -941,6 +929,7 @@
    ],
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
+    "#Progress adds a progress bar, when the calculate_cond function is called and hides it after the calculation is done\n",
     "progress=widgets.IntProgress(value=0,min=0,max=62,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
     "progress.layout.visibility='hidden'\n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
@@ -956,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -989,7 +978,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccdf9c7c828e47efa20c7ad4f7202522",
+       "model_id": "9c580eb8a3a5440cbf6bc77bda174f89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1004,50 +993,6 @@
    "source": [
     "display(Single_en_at)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
