--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -957,7 +957,7 @@
     "    lead_wfn(en=Energy)    \n",
     "    \n",
     "Single_en_at = interactive(single,Energy=widgets.FloatText(description_tooltip=\"Enter the energy at wich you want to calculate the properties\",value=0.5,description=\"Energy (t)\"))\n",
-    "ldos_current=1\n",
+    "ldos_current=1  #dummy variable vor loading cells\n",
     "    "
    ]
   },
