--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c368a4599df54c84b5dfc225655e9419",
+       "model_id": "91016dd9753f4582a210e629fa1724ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "MEDIUM_SIZE = 16\n",
     "BIGGER_SIZE = 16\n",
     "\n",
-    "\n",
+    "#added this comment\n",
     "plt.rc('axes', titlesize=MEDIUM_SIZE)     # fontsize of the axes title\n",
     "plt.rc('axes', labelsize=MEDIUM_SIZE)    # fontsize of the x and y labels\n",
     "plt.rc('xtick', labelsize=MEDIUM_SIZE)    # fontsize of the tick labels\n",
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -861,7 +861,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f583cca5277c462bb08167424c36c245",
+       "model_id": "7bc13e29f42f4c9295bfef5930d8b992",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +875,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d529678b431495cb7c277664634d2cd",
+       "model_id": "58132e6611674e50a1c3f9af7587e17a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -889,7 +889,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e32c4bdbdf024e20a9a87c356f85bb69",
+       "model_id": "2ace0b08c71e483b921d40ec47b87128",
        "version_major": 2,
        "version_minor": 0
       },
@@ -926,6 +926,7 @@
     "        Selection.children[6].value = Remove\n",
     "    rem_wid.value=''  #clear the field after entering which atoms to delete\n",
     "\n",
+    "    \n",
     "#Displays the reset_button        \n",
     "display(reset_button)"
    ]
