--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf3f451a61264a00b7581e9ed962da8a",
+       "model_id": "823faa5730a74911b6463512c723a0be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,6 @@
     "plt.rc('ytick', labelsize=MEDIUM_SIZE)    # fontsize of the tick labels\n",
     "plt.rc('legend', fontsize=MEDIUM_SIZE)    # legend fontsize\n",
     "plt.rc('figure', titlesize=MEDIUM_SIZE)  # fontsize of the figure title\n",
-    "#I'm adding this comment just for the pull \n",
     "\n",
     "#Builds the system, need to specify angle A and width W, for even W, specify chirality F=0(default) or 1.\n",
     "#For 120 degrees can also specify the distance D (default is 1) between leads.\n",
@@ -87,14 +86,14 @@
     "#Hopping parameter t can also be changed, default is 2.75 eV.\n",
     "\n",
     "\n",
-    "def make_system(A=60,W=11,D=1,S=0,F=0,t=2.75,d=0):\n",
+    "def make_system(A=180,W=11,D=1,S=0,F=0,Q=0,t=2.75):\n",
     "    \n",
     "#Check if width is even or odd and assign a variable N, that is used to construct system\n",
     "    if W % 2 == 0:\n",
     "        N=(W-2)/2\n",
     "    else:\n",
     "        N=(W-3)/2\n",
-    "    \n",
+    "#Assign a variable L to the distance of the 60 degree wedge vertex from the scattering region center.\n",
     "    if W%2==1:\n",
     "        L=(W-1)/2\n",
     "    if W%2==0 and F==1:\n",
@@ -138,17 +137,17 @@
     "    sys = kwant.Builder() # Initialize system builder\n",
     "    def circle(pos): #define the scattering region dimensions depending on angle\n",
     "        x, y = pos\n",
-    "        if A==180:\n",
+    "        if A==180: \n",
     "            if W%2==1:\n",
-    "                return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and -0.5<=y<=0.50+N+S+d #retruns the scattering region dimensions\n",
-    "            if W%2==0:\n",
+    "                return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and -0.5<=y<=0.50+N+S+Q \n",
+    "            if W%2==0: #different x starting points for different chiralities.\n",
     "                if F==0:\n",
-    "                    return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and 0<=y<=0.5+N+S+d\n",
+    "                    return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and 0<=y<=0.5+N+S+Q\n",
     "                if F==1:\n",
-    "                    if d!=0:\n",
-    "                        return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and -0.5<=y<=N+S+d-0.5\n",
+    "                    if Q!=0: #for chirality F=1, the first quantum dot shift must be half a graphene hexagon.\n",
+    "                        return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and -0.5<=y<=N+S+Q-0.5\n",
     "                    else:\n",
-    "                        return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and -0.5<=y<=N+S+d\n",
+    "                        return -1<=x<2*sqrt(3)/3+(D-1)*sqrt(3) and -0.5<=y<=N+S+Q\n",
     "        if A==120: #different positions depending on the distance between the leads to have correct looking lead attachments\n",
     "            if D==3:\n",
     "                return (x+sqrt(3)/6*(1-N)) ** 2 + (y+0.5*(1+N)) ** 2 <= r**2\n",
@@ -156,9 +155,9 @@
     "                return (x-sqrt(3)/6*N) ** 2 + (y+0.5*N) ** 2 <= r ** 2            \n",
     "            if D==1:\n",
     "                return (x-sqrt(3)/6*(1+N)) ** 2 + (y-0.5*(1-N)) ** 2 <= r**2\n",
-    "        if A==60:\n",
+    "        if A==60: #Wedge vertex distance from scattering center depends on AGNR parity and chirality. \n",
     "            c_x=3*sqrt(3)/6*N+L*3/(2*sqrt(3))\n",
-    "            c_y=-0.5*(N+L)\n",
+    "            c_y=-0.5*(N+L) #constants that appear when solving for wedge y<=... equation.\n",
     "            if W%2==0 and F==0:\n",
     "                return (x-3*sqrt(3)/6*N) ** 2 + (y+0.5*N) ** 2 <= r ** 2 and -(W-2)/2<=y<=(-2*x+c_y+2*c_x)\n",
     "            if W%2==0 and F==1:\n",
@@ -168,7 +167,8 @@
     "    \n",
     "    sys[graphene.shape(circle, (0, 0))] = 0    # Build scattering region\n",
     "    sys[graphene.neighbors()] = -t #Assign nearest-neighbour hoppings\n",
-    "    sys.eradicate_dangling() #Delete dangling atoms\n",
+    "    if A!=180:\n",
+    "        sys.eradicate_dangling() #Delete dangling atoms\n",
     "    sites=list(sys.sites()) #Obtain list of sites for further use \n",
     "    #In the case of 120 degrees for wide ribbons, the scattering region overlaps with the leads, \n",
     "    #removing atoms outside the intended scattering region\n",
@@ -430,13 +430,13 @@
     "        sys.attach_lead(lead1)\n",
     "     \n",
     "    #assigns global variables that are used for further calculations    \n",
-    "    return sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, d\n",
+    "    return sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, Q\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,6 @@
     "\n",
     "#Widget to build the structure\n",
     "def make_and_display(Angle,Width,Distance,Shift,QD,Chirality,RemAtoms):\n",
-    "    max_distance=3\n",
     "    if Width%2!=0:                               #some restrictions on what parameters you can change with the selected angle/width\n",
     "        Selection.children[5].disabled=True\n",
     "    if Width%2==0:\n",
@@ -805,7 +804,7 @@
     "        if Selection.children[4].value!=0:\n",
     "            Selection.children[3].disabled=True\n",
     "    #restrictions end    \n",
-    "    global sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, d, oldreset\n",
+    "    global sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, Q, oldreset\n",
     "    #This part checks if there are atoms to remove and hence the system has been already built or if len(RemAtoms)=0\n",
     "    #then new system will be built. Essentially this is \"cheating\" by always passing a list of atoms to remove, but\n",
     "    #when we build a new system the list is empty.\n",
@@ -818,7 +817,7 @@
     "            sys=del_atoms(atoms) #return new instance of sys with atoms removed, all other paramaters stay (lead,v1,A,D,W,etc.)\n",
     "            oldreset+=1\n",
     "    if len(RemAtoms)==0:     #If there is no list of atoms to remove then it means we build a new system with new params\n",
-    "        sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, d = make_system(A=Angle,W=Width,D=Distance,S=Shift,F=Chirality, d=QD) \n",
+    "        sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, Q = make_system(A=Angle,W=Width,D=Distance,S=Shift,F=Chirality, Q=QD) \n",
     "    #returns dimensions of the system for further plotting (ldos and current) and plots the system+band structure\n",
     "    global xaxis, yaxis \n",
     "    xaxis, yaxis = plot_numbers()\n",
@@ -853,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {
     "scrolled": false
    },
@@ -861,7 +860,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4c301e8b86544999204fa3678ab28cb",
+       "model_id": "2234c7ad3c83414ca6bd8a110d8f0f6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +874,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da575d115f8044b9a55351060599ce63",
+       "model_id": "e2df7d36cc43471faf9bab2cec88bc62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -889,7 +888,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0c89dc954424893924fc60215ba6b18",
+       "model_id": "c8f10423781c4cc0b384bb3776921d60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -940,13 +939,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98978f92df794c54976e479d763cbf71",
+       "model_id": "a4919b8d918a44d8a76f9380bfbc07ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -960,7 +959,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cc49926024d4f449c23ad1448c72ef1",
+       "model_id": "7475ef7530fb4c02a3575f0c77a3683b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -990,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -1023,7 +1022,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e1d2448466f443c953fe4a1157aba70",
+       "model_id": "27a563f267404a8b9b61e266103056ff",
        "version_major": 2,
        "version_minor": 0
       },
