--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f53ce7ac360844b3af422ac1e12a5a9b",
+       "model_id": "e98b491032d94595b95a663471d364cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "import cmocean\n",
     "import unicodedata\n",
     "from matplotlib import gridspec\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual, HBox, Label\n",
     "import ipywidgets as widgets\n",
     "\n",
     "\n",
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,47 +506,12 @@
     "        ax2.set_xlabel(\"k-vector\")\n",
     "        ax2.set_ylabel(\"Energy (t)\")\n",
     "        #returns the dimensions of the structure\n",
-    "        return xaxis, yaxis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 302,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return xaxis, yaxis\n",
     "#A function identical to plot_numbers, but returns the dimensions of the LDOS and LCurrent plots.\n",
     "#Additionally, it does not plot the bandstructure, and hides the numbered atom plot.\n",
     "def plot_numbers_sys2():\n",
     "        sites = list(sys2.sites()) #get the sites from kwant builder, the coordinates are shown in terms of lattice vectors\n",
     "        fig, ax = plt.subplots() #only one subplot here\n",
-    "        ax.set_yticks([])\n",
-    "        ax.set_xticks([])\n",
-    "        for count,atom in enumerate(sites): #go through all the sites in scattering region\n",
-    "            #Check which sublattice the atom belongs as different basis vectors p1/2 are used\n",
-    "            if str(atom[0])[19]=='0':\n",
-    "                p=p1\n",
-    "                xshift=0\n",
-    "                yshift=0.05\n",
-    "            else:\n",
-    "                p=p2\n",
-    "                xshift=0.05\n",
-    "                yshift=-0.05\n",
-    "            if A==120: #Checks for the angle and plots a numeber for each atom\n",
-    "                if atom[1][0]>-D and atom[1][0]+atom[1][1]<3: #only take the atoms in scattering centre,\n",
-    "                    #ignoring the lead sites\n",
-    "                    #atom gives the number of lattice vectors v1/2 to get to the position form (0,0)\n",
-    "                    #plus the basis p1/2 and a small shift for better plotting\n",
-    "                    fig.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
-    "                            s=str(count),color='r',fontsize=13) \n",
-    "            if A==60:\n",
-    "                if atom[1][0]>-sqrt(3)*1.5 and atom[1][1]<3:\n",
-    "                    fig.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
-    "                            s=str(count),color='r',fontsize=13)\n",
-    "            if A==180:\n",
-    "                if atom[1][0]>=-1 and atom[1][0]<=2*D-2:\n",
-    "                    fig.text(atom[1][0]*v1[0]+atom[1][1]*v2[0]+p[0]+xshift,atom[1][0]*v1[1]+atom[1][1]*v2[1]+p[1]+yshift,\n",
-    "                            s=str(count),color='r',fontsize=13)\n",
     "        kwant.plotter.plot(sys2,site_size=0,site_color='black',lead_site_size=0.25,site_edgecolor='black',lead_color='black',ax=ax) #plots the outline of the system\n",
     "        xaxis2=ax.get_xlim() #get the limits of x and y for further plotting\n",
     "        yaxis2=ax.get_ylim()\n",
@@ -570,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,12 +703,13 @@
     "    ax2.set_ylabel(\"DOS\")\n",
     "    ax2.set_ylim(ymin=0)\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
-    "    ax2.xaxis.set_tick_params(rotation=90)"
+    "    ax2.xaxis.set_tick_params(rotation=90)\n",
+    "    return energies, trans, trans2, dos, dos2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,12 +865,15 @@
     "#reseting or removing some atoms as the widget executes the function anytime a parameter is changed. \n",
     "#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\n",
     "Selection = interactive(make_and_display, Angle=widgets.ToggleButtons(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n",
-    "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=11, step=1, value=5),\n",
+    "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=11, step=1, value=5, description='Lead Width'),\n",
     "                        Distance=widgets.IntSlider(description_tooltip=\"Change the horizontal distance between the leads, not available with 60° angle\",min=1,step=1, value=1),\n",
     "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another, only available with 180° angle\",min=0,max=5,step=1, value=0),\n",
-    "                        QD=widgets.IntSlider(description_tooltip=\"Changes size of quantum dot\", min=0, max=5, step=1, value=0),\n",
+    "                        QD=widgets.IntSlider(description_tooltip=\"Selects the size of the quantum dot width\", min=0, max=5, step=1, value=0, description='QD Width'),\n",
     "                        Chirality=widgets.ToggleButtons(description_tooltip=\"For even-numbered widths, select chirality of the lead\",options=[('up',0),('down',1)]),\n",
     "                        RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
+    "\n",
+    "#widgets.IntSlider(description_tooltip=\"Changes size of quantum dot\", min=0, max=5, step=1, value=0, description='Junction Width',style=style)\n",
+    "#[widgets.Label(value='Junction Width'), widgets.IntSlider(description_tooltip=\"Changes size of quantum dot\", min=0, max=5, step=1, value=0)]\n",
     "\n",
     "Selection.children[6].layout.visibility=\"hidden\" #Hide RemAtoms seciton\n",
     "\n",
@@ -919,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 83,
    "metadata": {
     "scrolled": false
    },
@@ -927,7 +896,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1716d5f58d341219e56bedf82df5891",
+       "model_id": "17904e6c2c76412baa52ac7fe157938c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -941,7 +910,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "417d3563e8c84d2bbe300f888958f33f",
+       "model_id": "979d8d00d9c04642a23bf0b418cab146",
        "version_major": 2,
        "version_minor": 0
       },
@@ -955,7 +924,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3301b0fcfbdd47b2b7d3d96149a9ed07",
+       "model_id": "58e961f934e94baf8d956dd34dd075c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1006,13 +975,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4c9b464743d4eef9b74ce60f00b04ab",
+       "model_id": "1dfefe5fd17f41e180016b1832097886",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1026,7 +995,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed1f12f4fa3e42adbaff1ceb37d0f398",
+       "model_id": "1921acedfa7d4879948b7448a9e49e49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1046,17 +1015,17 @@
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
     "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
     "def calculate_cond(Emin,Emax):\n",
-    "    global fsys\n",
+    "    global fsys, energies, trans, trans2, dos, dos2\n",
     "    progress.layout.visibility=\"initial\" \n",
     "    fsys=sys.finalized()\n",
-    "    cond_and_dos(Emin,Emax)\n",
+    "    energies, trans, trans2, dos, dos2 = cond_and_dos(Emin,Emax)\n",
     "    progress.layout.visibility=\"hidden\"\n",
     "display(progress)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 66,
    "metadata": {
     "scrolled": false
    },
@@ -1089,7 +1058,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "439f9046675f4b37a7edb36bc1c0a4da",
+       "model_id": "8ac2a4b55a3747f6ae5a2a69ffbb2925",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1104,103 +1073,6 @@
    "source": [
     "display(Single_en_at)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
